# proca-server

./: .envrc  .gitignore  .tool-versions  CHANGELOG.MD  Dockerfile  LICENSE  README.MD  README.md  build  build-and-release  lerna.json  mix.exs  package-lock.json  package.json  schema.graphql
.github/: dependabot.yml
archive/: README.md
archive/sdk/cli-py/: README.MD  build.sh  proca.py  pyproject.toml
archive/sdk/cli-py/proca/: __init__.py  client.py  context.py  util.py
archive/sdk/cli-py/proca/cmd/: action.py  campaign.py  page.py  server.py  service.py  user.py
config/: config.exs  dev.exs  prod.exs  releases.exs  test.exs
deploy/: proca-blue.service  proca-green.service  proca-nginx.conf
guides/: API.md  HowToSyncActionsData.md  Processing.md  Telemetry.md  asdf.md  start.md  starting.md
proca/: .iex.exs  .tool-versions  Dockerfile  README.md  mix.exs  package-lock.json  package.json  schema.graphql
scripts/: README.md  auto-close-campaigns  backfill-campaign-dates  build-release  contact-retention  create-eci  deploy-bluegreen  deploy-live  deploy-simple  deploy-staging  export-messages  kratos-user  list-org-users  list-users  list-webhooks  log-failed-emails  log-level  make-coordinator  make-owner  make-owner-stg  mtt-coalition  release  reload-templates  remove-from-org  remove-org  resend-confirm-email  reset-local-password  reset-token  rpc  test-email
service/: AWS_LAMBDA.md
test/: campaign_list_test.exs  org_test.exs  reject_supporter_test.ex  release_test.exs  roles_test.exs  supporter_test.exs  target_test.exs  test_helper.exs
(+874 files in other folders)
